# verify-mcp-server

./: .gitignore  CLAUDE.md  CLAUDE_roguelike_verification_v2.md  Cargo.toml  PROJECT_OVERVIEW.md  README.md
.agents/rules/: verify-mcp-workflow.md
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/workflows/: ci.yml
examples/: CLAUDE_roguelike_verification_v2.md  antigravity_rule_verify-workflow-ruke.md  antigravity_rule_verify-workflow-rule.md  mcp_config.json  rust_project_contract.json
src/: contract.rs  main.rs  protocol.rs  sandbox.rs  storage.rs  templates.rs  tools.rs  verification.rs
src/verification/: ast.rs  command.rs  file.rs  helpers.rs  json.rs  misc.rs  mod.rs  python.rs  web.rs  workspace.rs
tests/: integration_test.rs
