[package]
name = "verify-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for contract-based verification of agentic AI outputs"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
ignore = "0.4.25"
sha2 = "0.10.9"
